--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,13 +26,15 @@
             android:name=".TopTracksActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_top_tracks"
-            android:parentActivityName=".MainActivity" >
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.spotifystreamer.MainActivity" />
         </activity>
         <activity
             android:name=".MusicPlayAcitvity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_music_play_acitvity"
             android:parentActivityName=".TopTracksActivity" >
             <meta-data
